fix(navigation-submenu): Add scrollbar when the menu is to long. (#7455)
* fix(navigation-submenu): Add scrollbar when the menu is to long.

* fix(sumbenu): Change resolution for the media query.

--- a/www/front_src/src/components/navigation/navigation.scss
+++ b/www/front_src/src/components/navigation/navigation.scss
@@ -824,3 +824,10 @@ a {
     display: none;
   }
 }
+@media screen and(max-width: 1400px) {
+  li.menu-item:last-child .collapsed-items li.collapsed-item:first-child > ul.collapsed-level-items {
+    max-height: 350px;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+}
